--- a/ReplicationController/ReplicationController.yml
+++ b/ReplicationController/ReplicationController.yml
@@ -12,7 +12,7 @@ metadata:
   name: nodejsapp
   namespace: nodejsapp
   labels:
-    app: nodejsap
+    app: nodejsapp
 spec:
   replicas: 3
   selector:
